--- a/src/components/FormTable/style/index.css
+++ b/src/components/FormTable/style/index.css
@@ -1,3 +1,18 @@
 .antd-formTable .ant-form-item {
   margin-bottom: 0;
 }
+
+.antd-formTable .required::before {
+  display: inline-block;
+  margin-right: 4px;
+  color: #f5222d;
+  font-family: SimSun, sans-serif;
+  line-height: 1;
+  content: "*";
+}
+
+.antd-formTable .text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
